--- a/atef/ui/config_value_edit.ui
+++ b/atef/ui/config_value_edit.ui
@@ -32,101 +32,126 @@
     <widget class="QComboBox" name="enum_input"/>
    </item>
    <item>
+    <widget class="QWidget" name="epics_widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>6</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="epics_indicator">
+        <property name="text">
+         <string>EPICS PV:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="epics_input"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="epics_equals">
+        <property name="text">
+         <string>=</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="epics_value_preview">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="epics_refresh">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="happi_widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="happi_indicator">
+        <property name="text">
+         <string>Happi Device:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="happi_select_device">
+        <property name="text">
+         <string>Device</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="happi_dot">
+        <property name="text">
+         <string>.</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="happi_select_component">
+        <property name="text">
+         <string>Component</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="happi_equals">
+        <property name="text">
+         <string>=</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="happi_value_preview">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="happi_refresh">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QLineEdit" name="float_input"/>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="epics_layout">
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="epics_indicator">
-       <property name="text">
-        <string>EPICS PV:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="epics_input"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="epics_equals">
-       <property name="text">
-        <string>=</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="epics_value_preview">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QToolButton" name="epics_refresh">
-       <property name="text">
-        <string>...</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="happi_layout">
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="happi_indicator">
-       <property name="text">
-        <string>Happi Device:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="happi_select_device">
-       <property name="text">
-        <string>Device</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="happi_dot">
-       <property name="text">
-        <string>.</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="happi_select_component">
-       <property name="text">
-        <string>Component</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="happi_equals">
-       <property name="text">
-        <string>=</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="happi_value_preview">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QToolButton" name="happi_refresh">
-       <property name="text">
-        <string>...</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
    <item>
     <widget class="QSpinBox" name="int_input"/>
