--- a/atef/ui/config_value_edit.ui
+++ b/atef/ui/config_value_edit.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>356</width>
+    <width>313</width>
     <height>201</height>
    </rect>
   </property>
@@ -69,7 +69,7 @@
       <item>
        <widget class="QLabel" name="epics_value_preview">
         <property name="text">
-         <string>TextLabel</string>
+         <string>?</string>
         </property>
        </widget>
       </item>
@@ -136,7 +136,7 @@
       <item>
        <widget class="QLabel" name="happi_value_preview">
         <property name="text">
-         <string>TextLabel</string>
+         <string>?</string>
         </property>
        </widget>
       </item>
