--- a/atef/ui/tool_configuration_widget.ui
+++ b/atef/ui/tool_configuration_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>498</height>
+    <height>390</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -118,44 +118,77 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Mode:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="mode_combo"/>
-     </item>
     </layout>
    </item>
    <item>
     <widget class="QPlainTextEdit" name="desc_edit"/>
    </item>
    <item>
-    <widget class="Line" name="line">
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QComboBox" name="tool_selector_combo"/>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Configuration:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QFormLayout" name="tool_config_form"/>
+   </item>
+   <item>
+    <widget class="Line" name="line_4">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="group_content_table"/>
+    <widget class="QLabel" name="label_6">
+     <property name="text">
+      <string>Comparisons</string>
+     </property>
+    </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="add_config_button">
-       <property name="text">
-        <string>+ Add Config</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="select_type_combo"/>
-     </item>
-    </layout>
+    <layout class="QVBoxLayout" name="comparisons_layout"/>
+   </item>
+   <item>
+    <widget class="QToolButton" name="toolButton">
+     <property name="text">
+      <string>+</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
