--- a/atef/ui/configuration_group_widget.ui
+++ b/atef/ui/configuration_group_widget.ui
@@ -32,7 +32,7 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="values_label">
        <property name="text">
         <string>Global Values:</string>
        </property>
@@ -52,7 +52,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="mode_label">
        <property name="text">
         <string>Mode:</string>
        </property>
