--- a/atef/ui/configuration_group_page.ui
+++ b/atef/ui/configuration_group_page.ui
@@ -28,7 +28,21 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="config_Table"/>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Configurations:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QTableWidget" name="config_Table">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
