--- a/atef/ui/configuration_group_widget.ui
+++ b/atef/ui/configuration_group_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>117</height>
+    <height>147</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,11 +32,14 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QLabel" name="values_label">
+      <widget class="QLabel" name="mode_label">
        <property name="text">
-        <string>Global Values:</string>
+        <string>Mode:</string>
        </property>
       </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="mode_combo"/>
      </item>
      <item>
       <spacer name="horizontalSpacer_4">
@@ -51,20 +54,23 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QLabel" name="mode_label">
-       <property name="text">
-        <string>Mode:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="mode_combo"/>
-     </item>
     </layout>
    </item>
    <item>
+    <widget class="QLabel" name="values_label">
+     <property name="text">
+      <string>Global Values:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QTableWidget" name="values_table">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <column>
       <property name="text">
        <string>Name</string>
@@ -81,6 +87,26 @@
       </property>
      </column>
     </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="add_value_button">
+     <property name="text">
+      <string>+ Add Global Value</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
