--- a/atef/ui/name_desc_tags_widget.ui
+++ b/atef/ui/name_desc_tags_widget.ui
@@ -172,6 +172,19 @@
       <item>
        <widget class="QPlainTextEdit" name="desc_edit"/>
       </item>
+      <item>
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
     </widget>
    </item>
