--- a/atef/ui/device_configuration_page.ui
+++ b/atef/ui/device_configuration_page.ui
@@ -22,6 +22,9 @@
    </item>
    <item>
     <widget class="QTableWidget" name="comparisons_table">
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
      <column>
       <property name="text">
        <string>Comparisons</string>
