--- a/atef/ui/pv_configuration_page.ui
+++ b/atef/ui/pv_configuration_page.ui
@@ -144,22 +144,6 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="label_5">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Comparisons</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QTableWidget" name="comparisons_table">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -178,9 +162,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QToolButton" name="add_comparison_button">
+         <widget class="QPushButton" name="add_comparison_button">
           <property name="text">
-           <string>+</string>
+           <string>+ Add Comparison</string>
           </property>
          </widget>
         </item>
