--- a/atef/ui/name_desc_tags_widget.ui
+++ b/atef/ui/name_desc_tags_widget.ui
@@ -84,6 +84,13 @@
         </property>
        </spacer>
       </item>
+      <item>
+       <widget class="QLabel" name="extra_text_label">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
